Updated button type to avoid form submission

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -5,6 +5,6 @@
     <input type="email" id="inputEmail" class="form-control" #username placeholder="Username" >
     <label for="inputPassword" class="sr-only">Password</label>
     <input type="password" id="inputPassword" class="form-control" #password placeholder="Password">
-    <button class="btn btn-lg btn-primary btn-block" (click)="login(username.value, password.value)">Sign in</button>
+    <button class="btn btn-lg btn-primary btn-block" type="button" (click)="login(username.value, password.value)">Sign in</button>
   </form>
 </div>
