feat: add navigation bar

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <!-- Insert navigation component here -->
+<app-navigation></app-navigation>
 
 <main role="main">
   <!-- Insert jumbotron component here -->
