--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,7 @@
 
 <main role="main">
   <!-- Insert jumbotron component here -->
+  <app-jumbotron title="Welcom to our store" description="Browser our collection of License Plates below"></app-jumbotron>
 
   <div class="container">
     <div class="row" >
