feat: implement BindingsComponent

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,6 +6,7 @@
   <app-jumbotron title="Welcom to our store" description="Browser our collection of License Plates below"></app-jumbotron>
 
   <div class="container">
+    <app-bindings></app-bindings>
     <div class="row" >
       <!-- License plates go here -->
     </div>
