--- a/src/app/bindings/bindings.component.html
+++ b/src/app/bindings/bindings.component.html
@@ -1,4 +1,4 @@
 <p>
-    <input type="text" [value]="name">
+    <input type="text" [(ngModel)]="name">
     <button (click)="alertName()">Click me</button>
 </p>
