--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,11 +9,13 @@
     <!-- <app-bindings></app-bindings> -->
     <div class="row">
       <!-- License plates go here -->
-      <app-license-plate *ngFor="let lp of licensePlates"
-        [plate]="lp"
-        buttonText="Add to cart" 
-        class="col-md-4">
-      </app-license-plate>
+      @for(lp of licensePlates; track lp._id) {
+        <app-license-plate *ngFor="let lp of licensePlates"
+          [plate]="lp"
+          buttonText="Add to cart" 
+          class="col-md-4">
+        </app-license-plate>
+      }
 
     </div>
   </div>
